<resources>
    <string name="app_name">Calculadora</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="times">*</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="divided">/</string>
    <string name="percent">%</string>
    <string name="powerOf">^</string>
    <string name="root">√</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="advanced_calculator">Advanced Calculator</string>
    <string name="error">Error</string>
</resources>